--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,9 @@
 <html lang="en">
+<head>
+    <title>Test WebGL</title>
+</head>
 <body>
-<script src="./index.js"></script>
+    <canvas id="canvasGL" style="border: solid;" ></canvas>
+    <script type="text/javascript" src="./index.js"></script>
 </body>
 </html>
