--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Test WebGL</title>
-</head>
-<body>
-    <canvas id="canvasGL" style="border: solid;" ></canvas>
-    <script type="text/javascript" src="./index.js"></script>
+    <head>
+        <link rel="icon" href="data:;base64,iVBORwOKGO=" />
+        <title>Test WebGL</title>
+    </head>
+<body style="background-color: white; margin: 0; overflow: hidden;">
+    <canvas id="canvasGL" style="border: solid;"></canvas>
+    <script src="./index.js"></script>
 </body>
 </html>
