--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
         <title>Test WebGL</title>
     </head>
 <body style="background-color: white; margin: 0; overflow: hidden;">
-    <canvas id="canvasGL" style="border: solid;"></canvas>
+    <canvas id="canvasGL"></canvas>
     <script src="./index.js"></script>
 </body>
 </html>
