--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,6 @@
     </head>
 <body style="background-color: white; margin: 0; overflow: hidden;">
     <canvas id="canvasGL"></canvas>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
