--- a/www/index.html
+++ b/www/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello wasm-pack!</title>
+    <title>Test WebGL</title>
   </head>
-  <body>
+  <body style="background-color: white; margin: 0; overflow: hidden;">
     <canvas id="canvasGL"></canvas>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
     <script src="./bootstrap.js"></script>
